--- a/Pages/forget.html
+++ b/Pages/forget.html
@@ -17,7 +17,7 @@
                 <label for="Forget">Email:</label><br>
                 <input type="email/number" name="Forget" placeholder="Enter your email address or phone number" required autofocus>
                 <br>
-                <button><a href="../index.html">Cancel</a></button>
+                <button><a href="../index.html" target="_blank">Cancel</a></button>
                 <input type="submit" value="Search">
             </fieldset>
         </form>
