--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <input type="submit" value="Login">
         </fieldset>
     </form>
-    <p><a href="Pages/forget.html">Forgotten Password?</a></p>
+    <p><a href="Pages/forget.html" target="_blank">Forgotten Password?</a></p>
     <span><p>or</p></span>
-    <button><p><a href="Pages/registration.html">Create New Account</a></p></button>
+    <button><p><a href="Pages/registration.html" target="_blank">Create New Account</a></p></button>
 </div>
 </body>
 </html>
